[package]
name = "fdcanusb"
version = "0.5.0"
edition = "2021"
description = "Protocol implementation for the FDCANUSB by MJBOTS"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/omelia-iliffe/fdcanusb-rs"

[dependencies]
hex = "0.4.0"
serial2 = { version = "0.2", optional = true }
log = "0.4"
thiserror = "1.0.0"

[features]
default = ["serial2"]
serial2 = ["dep:serial2"]
