[package]
name = "fdcanusb"
version = "0.6.2"
edition = "2021"
description = "Protocol implementation for the FDCANUSB by MJBOTS"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/omelia-iliffe/fdcanusb-rs"

[dependencies]
hex = "0.4.0"
serial2 = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
thiserror = "1.0.0"

[features]
default = ["serial2", "log"]
