[package]
name = "fdcanusb"
version = "0.6.3"
edition = "2021"
description = "Protocol implementation for the FDCANUSB by MJBOTS"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/omelia-iliffe/fdcanusb-rs"

[dependencies]
hex = "0.4.0"
serial2 = { version = "0.2", features = ["unix"]}
log = { version = "0.4", optional = true }
thiserror = "2"
derive_more = { version = "1.0.0", features = ["from", "error", "display", "debug"] }
libc = "0.2.169"

[features]
default = ["log"]
